Make the Pure compiler Pure implementation work (#17)
* Small improvements

* Start adding error management

* Multi error test

* Add error management for Association

* Add more error use cases

* Improve profile support

* Clean structural code

* More error management. Ambiguous types

* More function management

* More error flows for Lambda

* Better variable management

* Add better support for Primitive

* Add contraints for primitive. Add primitive VS.

* Fix wrap/unwrap for the exec engine. Add collection tests

* add support for let

* Start wiring the resolver architecture

* Continue working on the resolver framework

* Resolver improvements

* Work on aligning Pure and Java flows

* Fix the wrap/unwrap issue. Continue making the resolver match the Java Flow

* Add a meta navigation test

* More resolver progress

* Fix cast

* Fix evaluator. Continue converging on resolver

* Various fixes

* Fix wrap/unwrap

* Fix execution engine. Add more compiler use cases

* better functionApplicationResolver

* Make functionApplication/simple tests work

* More functionApplication resolution

* fixPoint implementation

* FixPoint convergence

* FixPoint convergence

* FixPoint convergence

* FixPoint convergence

* FixPoint convergence

* Resolution convergence

* Resolution convergence

* Resolution convergence

* Resolution convergence

* Resolution convergence

* Enable more tests

* Enable more tests

* Enable more tests

* Enable more tests

* Enable more tests

* Enable more tests

* Enable more tests

* Enable more tests

* Enable more tests

* Fix duplicate errors in the Java compiler

* Add freeze for pdb objects

* Improve validation for copy and new

* Fix last test before Relation

* Add support for structural relation

* Introduce CompilerNotSetGenericType and CompilerNotSetMultiplicity. Fix Relation tests

* Compiler working! But have to clean enums

* Fix the way we manage Enumeration and Enum

* Add more compiler tests

* Clean the compiler tests 